# X-GMiner

./: .gitignore  CMakeLists.txt  README.md  env.sh  setup.py
codes/: CMakeLists.txt
codes/GLUMIN/: .gitignore  Makefile  README.md  run_AutoMine.sh  run_G2Miner.sh  run_GraphFold.sh
codes/GLUMIN/codegen/: Makefile  common.mk  gpm
codes/GLUMIN/codegen/codegen/: codegen.py  pattern.yml
codes/GLUMIN/codegen/codegen/patterns/: 3-path.yml  3-triangle.yml  4-clique.yml  4-cycle.yml  4-diamond.yml  4-path.yml  4-star.yml  4-tailed-triangle.yml  5-clique.yml  5-cycle.yml  5-double-triangle.yml  5-house.yml  5-path.yml  5-solid-house.yml  5-star.yml  5-tailed-square.yml  pattern.yml
codes/GLUMIN/codegen/include/: LUT.cuh  common.h  graph_gpu.h  timer.h
codes/GLUMIN/codegen/include/gpu_kernels/: bitmap.cuh  codegen_utils.cuh  driver.h  search.cuh  set_difference.cuh  set_intersect.cuh  template.cuh
codes/GLUMIN/codegen/scripts/: codegen.sh  generate_and_run.sh  run.sh
codes/GLUMIN/codegen/src/: main.cu
codes/GLUMIN/include/: GpuUtil.cuh  VertexSet.h  binary_encode.h  chunk.cuh  codegen_LUT.cuh  codegen_LUT.hpp  codegen_bitmap.cuh  codegen_bitmap.hpp  codegen_utils.cuh  codegen_utils.hpp  common.h  cuda_launch_config.hpp  cutil_subset.h  expand_LUT.cuh  expand_bitmap.cuh  graph_gpu.h  operations.cuh  search.cuh  set_difference.cuh  set_intersect.cuh  set_operation_ext.hpp  timer.h
codes/GLUMIN/src/: common.mk
codes/GLUMIN/src/AutoMine/: Makefile  cpu_serials  cpu_serials.cc  main.cc
codes/GLUMIN/src/G2Miner/: Makefile  Makefile.txt  gpu_GM.cu  gpu_GM_LUT.cu  main.cc  makeLUT.sh  run.sh  run_GM.sh
codes/GLUMIN/src/GraphFold/: Makefile  gpu_GF_LUT.cu  main.cc  run.sh
codes/GLUMIN/src/clique/: Makefile  clique_GF_LUT.cu  clique_GM.cu  clique_GM_LUT.cu  main.cc  run.sh
codes/GLUMIN/src/common/: graph.cc  graph_partition.cc
codes/GLUMIN/src/pattern/: Makefile  cpu_serials.cc  main.cc  multigpu_GM_LUT.cu
codes/GraphFold/: CMakeLists.txt
codes/GraphFold/datasets/: enron.mtx
codes/GraphPi/: CMakeLists.txt
codes/GraphPi/include/: dataloader.h  graph.h  schedule.h  vertex_set.h
codes/GraphPi/src/: CMakeLists.txt  common.cpp  dataloader.cpp  graph.cpp  restricts_printer.cpp  schedule.cpp  vertex_set.cpp
codes/GraphPi/tianhe/: CMakeLists.txt  baseline_test.cpp
codes/GraphSet/: CMakeLists.txt
codes/GraphSet/test/: CMakeLists.txt
codes/GraphSet/tianhe/: CMakeLists.txt
codes/HEROFramework/: CMakeLists.txt  README.md
codes/HEROFramework/data/: test.txt  test1.txt
codes/HEROFramework/data/BFSR/: pro-twitter-81306-1342296_BFSR_newID.txt
codes/HEROFramework/data/DFS/: pro-twitter-81306-1342296_DFS_newID.txt
codes/HEROFramework/data/HBGP/: pro-twitter-81306-1342296_HBGPorder_newID.txt  test1_HBGPorder.txt  test1_HBGPorder_newID.txt  test_HBGPorder.txt  test_HBGPorder_newID.txt
codes/HEROFramework/data/Horder/: pro-twitter-81306-1342296_Horder_newID.txt
codes/HEROFramework/data/MLOGGAPA/: pro-twitter-81306-1342296_MLOGGAPAorder_newID.txt
codes/HEROFramework/data/SB/: pro-twitter-81306-1342296_SB_newID.txt
codes/HEROFramework/data/pairdata/: twitter_global_pair.txt  twitter_local_pair.txt
codes/HEROFramework/scripts/: run_mc.sh  run_pt.sh  run_sl.sh  run_tc.sh
codes/HEROFramework/src/: SIBTree.cpp  SIBTree.hpp  graph.cpp  graph.hpp  mc.cpp  pt.cpp  reorder.cpp  reorder.hpp  sl.cpp  tc.cpp  util.cpp  util.hpp
docker/: Dockerfile  (+2 more)
xgminer/: CMakeLists.txt  main.cpp
xgminer/codegen/python_simu/: matrix_tests.py  test.ipynb
xgminer/include/: cmd_option.h  common.h  cpu_baseline.h  dataloader.h  glumin.h  gpm_solver.cuh  graph.h  graph_v2.h  graph_v2_gpu.h  kernel.h  log_manager.h  pattern.h  schedule.h  utils.h  vertex_set.h  xgminer_bitmap.cuh
xgminer/include/cuda_utils/: cuda_launch_config.hpp  cuda_utils.cuh  gpu_utils.h
xgminer/include/glumin/: binary_encode.h  chunk.cuh  codegen_LUT.cuh  codegen_LUT.hpp  codegen_bitmap.cuh  codegen_bitmap.hpp  codegen_utils.cuh  codegen_utils.hpp  expand_LUT.cuh  expand_bitmap.cuh  operations.cuh  search.cuh  set_difference.cuh  set_intersect.cuh  set_operation_ext.cuh  timer.h
xgminer/include/graphpi/: graphmpi.h
xgminer/src/: common.cpp  cpu_baseline.cpp  dataloader.cpp  glumin.cu  glumin_solver.cu  gpm_solver.cu  graph.cpp  graph_v2.cpp  pattern_glumin.cpp  pattern_graphpi.cpp  schedule.cpp  vertex_set_glumin.cpp  vertex_set_graphpi.cpp  xgminer_solver.cu
xgminer/src/cpu_kernels/: 4_motif_glumin_p1_base.cpp  4_motif_glumin_p2_base.cpp  4_motif_glumin_p3_base.cpp  4_rectangle_baseline.cpp
xgminer/src/glumin/: glumin_GF_solver.cu  glumin_GM_solver.cu  glumin_automine_solver.cpp  glumin_clique_solver.cu  glumin_solver.cu  pattern_glumin.cpp  vertex_set_glumin.cpp
xgminer/src/gpu_kernels/xgminer/: P2_kernel.cuh
xgminer/src/graphpi/: disjoint_set_union.cpp  graphmpi.cpp  prefix.cpp
(+253 files in other folders)
